[package]
name = "notify-future"
version = "0.2.1"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/wugren/notify-future.git"
description = "Support asynchronous notification completion future"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
async-std = "1.12.0"
