[package]
name = "notify-future"
version = "0.2.6"
edition = "2021"
license = "MIT"
repository = "https://github.com/wugren/notify-future.git"
description = "Support asynchronous notification completion future"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-waker = "1.1.1"

[dev-dependencies]
loom = "0.7.2"
